[package]
name = "oxide"
version = "0.1.0"
authors = ["Jonatan Sundqvist <jonatanhsundqvist@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.0.0"
glium = "0.28.0"
memoffset = "0.5"
takeable-option = "0.5"
backtrace = "0.3.2"
lazy_static = "1.0"
smallvec = "1.0"
rental = "0.5.4"
fnv = "1.0.5"
cgmath = "0.17"
genmesh = "0.6"
image = "0.23"
obj = { version = "0.10", features = ["genmesh"] }
rand = "0.7"
libc = "0.2.62"
glutin = "0.25.1"
rusttype = { version = "0.9.2", features = ["gpu_cache"] }
yew = { version = "0.17", package = "yew-stdweb" }
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0"
libloading = "0.6.6"
lyon = "0.17.3"
notify = "4.0.10"

[build-dependencies]
gl_generator = "0.14"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "interpreter"
path = "src/interpreter.rs"

[[bin]]
name = "borrow"
path = "src/borrow.rs"

[[bin]]
name = "euler"
path = "src/euler/SevenThreeFive.rs"

[[bin]]
name = "nabil"
path = "src/nabil/main.rs"

[[bin]]
name = "wall"
path = "src/wall/main.rs"

[[bin]]
name = "pixels"
path = "src/pixels/main.rs"

[[bin]]
name = "WordChain"
path = "src/kata/WordChain.rs"

[[bin]]
name = "voxels"
path = "src/voxels/main.rs"
